tv/seerr-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
  namespace: tv
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    flame.pawelmalak/type: app
    flame.pawelmalak/name: Requests
    flame.pawelmalak/url: https://seerr.mdapi.ch
    flame.pawelmalak/category: TV Interface
    flame.pawelmalak/icon: chat-question
    flame.pawelmalak/order: '20'
spec:
  ingressClassName: nginx
  rules:
    - host: seerr.mdapi.ch
      http:
        paths:
          - backend:
              service:
                name: seerr
                port:
                  number: 5055
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - seerr.mdapi.ch
      secretName: seerr-cert
